@@ -1,3 +1,5 @@
+* BUG#9502 Don't auto_uninstall modules
+
 Version 4.6.3 - 2018-03-01
 * Bug fixes (see mercurial logs for details)
 
